2008-07-12  Mathias Hasselmann  <mathias@openismus.com>

	Moved localization related ChangeLog messages to po folder
	to fit translation team's needs.

	* ChangeLog: Removed localization related messages.
	* po/ChangeLog: Added localization related messages.

2008-06-22  Mathias Hasselmann  <mathias@openismus.com>

	Try to prevent crash after avahi_service_browser_free (#539630).

	* libepc/service-monitor.c (epc_service_monitor_constructed()):
	  Really never add NULL pointer to internal browser list when
	  epc_shell_create_service_browser() returns NULL, but forgets
	  to raise an exception (set the error variable).

	* libepc/shell.c (epc_shell_create_service_browser()):
	  Set error variable when avahi_service_browser_new() returns NULL.

2008-05-09  Mathias Hasselmann  <mathias@openismus.com>

	Properly express dependencies of libepc-ui-1.0.la.

	* Makefile.am:
	  Remove libepc/libepc-1.0.la from libepc_ui_libepc_ui_1_0_la_LDFLAGS
	  and properly add it to libepc_ui_libepc_ui_1_0_la_LIBADD.

2008-04-07  Mathias Hasselmann  <mathias@openismus.com>

	=== Release 0.3.5 ===

2008-04-07  Mathias Hasselmann  <mathias@openismus.com>

	Make test suite build with -Werror again.

	* tests/framework.c (_epc_test_match_any(), _epc_test_match_one(),
	  _epc_test_pass_once_per_iface()): Mark unused arguments and change
	  type of ifidx argument from gint to guint.

2008-04-07  Mathias Hasselmann  <mathias@openismus.com>

	Prepare release.

	* NEWS: Updated from ChangeLog
	* configure.ac: Bump version number.

2008-04-07  Mathias Hasselmann  <mathias@openismus.com>

	Upgrade the test suite to handle multiple active network interfaces.

	* tests/framework.c, tests/framework.h (EpcIfTestStatus,
	  epc_test_list_ifaces(), _epc_test_match_any(), _epc_test_match_one(),
	  _epc_test_pass_once_per_iface(), epc_test_pass_once_for_each_iface(),
	  epc_test_pass_once_per_iface()): Provide infrastructure for handling
	  tests, that match once for each active network interface.
